Add 'no glyr library' configuration option

--- a/nclyr/Makefile
+++ b/nclyr/Makefile
@@ -1,6 +1,8 @@
 
 objs-y += song.o nclyr.o signal_handler.o debug.o
 
+objs-$(CONFIG_LIB_GLYR) += lyr_thread.o
+
 subdir-y += players
 subdir-y += tui
 
