--- a/nclyr/tui/Makefile
+++ b/nclyr/tui/Makefile
@@ -2,7 +2,8 @@
 objs-y += tui.o
 objs-y += tui_state.o
 objs-y += main_win.o
-objs-y += lyrics_win.o
 objs-y += clock_win.o
 objs-y += statusline.o
+
+objs-$(CONFIG_LIB_GLYR) += lyrics_win.o
 
