Fixup player and mpd stuff

--- a/nclyr/Makefile
+++ b/nclyr/Makefile
@@ -1,5 +1,5 @@
 
-objs-y += song.o nclyr.o signal_handler.o debug.o
+objs-y += song.o nclyr.o signal_handler.o debug.o a_sprintf.o
 
 objs-$(CONFIG_LIB_GLYR) += lyr_thread.o
 
