Add updates to tui

--- a/nclyr/tui/Makefile
+++ b/nclyr/tui/Makefile
@@ -2,7 +2,9 @@
 objs-y += tui.o
 objs-y += tui_state.o
 objs-y += clock_win.o
+objs-y += help_win.o
 objs-y += statusline.o
+objs-y += line_win.o
 
 objs-$(CONFIG_LIB_GLYR) += lyrics_win.o
 
