Added char_to_str interface, to display key names

--- a/nclyr/tui/Makefile
+++ b/nclyr/tui/Makefile
@@ -5,6 +5,7 @@ objs-y += clock_win.o
 objs-y += help_win.o
 objs-y += statusline.o
 objs-y += line_win.o
+objs-y += char_to_str.o
 
 objs-$(CONFIG_LIB_GLYR) += lyrics_win.o
 
