--- a/nclyr/tui/Makefile
+++ b/nclyr/tui/Makefile
@@ -6,6 +6,8 @@ objs-y += help_win.o
 objs-y += statusline.o
 objs-y += line_win.o
 objs-y += char_to_str.o
+objs-y += window_center.o
 
 objs-$(CONFIG_LIB_GLYR) += lyrics_win.o
+objs-$(CONFIG_LIB_GLYR) += artist_win.o
 
