Add command line arguments

--- a/nclyr/Makefile
+++ b/nclyr/Makefile
@@ -1,5 +1,11 @@
 
-objs-y += song.o nclyr.o signal_handler.o debug.o a_sprintf.o
+objs-y += song.o
+objs-y += nclyr.o
+objs-y += signal_handler.o
+objs-y += debug.o
+objs-y += a_sprintf.o
+objs-y += args.o
+objs-y += arg_parser.o
 
 objs-$(CONFIG_LIB_GLYR) += lyr_thread.o
 
