Various updates, remove arg_parser, and add config system
This commit adds the configuration system, which replaces the arg_parser
code. The configuration is setup to allow configuration both from a
config file and from command-line arguments.

--- a/nclyr/Makefile
+++ b/nclyr/Makefile
@@ -4,11 +4,13 @@ objs-y += nclyr.o
 objs-y += signal_handler.o
 objs-y += debug.o
 objs-y += a_sprintf.o
+objs-y += stringcasecmp.o
 objs-y += args.o
-objs-y += arg_parser.o
+objs-y += nclyr_conf.o
 
 objs-$(CONFIG_LIB_GLYR) += lyr_thread.o
 
 subdir-y += players
 subdir-y += tui
+subdir-y += config
 
