Only compile debug.c when NCLYR_DEBUG=y

--- a/nclyr/Makefile
+++ b/nclyr/Makefile
@@ -2,13 +2,13 @@
 objs-y += song.o
 objs-y += nclyr.o
 objs-y += signal_handler.o
-objs-y += debug.o
 objs-y += a_sprintf.o
 objs-y += stringcasecmp.o
 objs-y += args.o
 objs-y += nclyr_conf.o
 
 objs-$(CONFIG_LIB_GLYR) += lyr_thread.o
+objs-$(NCLYR_DEBUG) += debug.o
 
 subdir-y += players
 subdir-y += tui
