Add iface struct implement it with the tui

--- a/nclyr/Makefile
+++ b/nclyr/Makefile
@@ -6,6 +6,7 @@ objs-y += a_sprintf.o
 objs-y += stringcasecmp.o
 objs-y += args.o
 objs-y += nclyr_conf.o
+objs-y += iface.o
 
 objs-$(CONFIG_LIB_GLYR) += lyr_thread.o
 objs-$(NCLYR_DEBUG) += debug.o
