--- a/nclyr/players/Makefile
+++ b/nclyr/players/Makefile
@@ -1,5 +1,10 @@
 
 objs-y += players.o
+objs-y += player_ctrl.o
+objs-y += player_notif.o
+objs-y += player_send.o
+objs-y += player_state_full.o
+objs-y += player_thread.o
 
 subdir-$(CONFIG_PLAYER_PIANOBAR) += pianobar
 subdir-$(CONFIG_PLAYER_MPD) += mpd
