Adding new color handling functions

--- a/nclyr/Makefile
+++ b/nclyr/Makefile
@@ -9,6 +9,7 @@ objs-y += nclyr_conf.o
 objs-y += iface.o
 objs-y += build.o
 objs-y += playlist.o
+objs-y += cons_color.o
 
 objs-$(CONFIG_LIB_GLYR) += lyr_thread.o
 objs-$(NCLYR_DEBUG) += debug.o
