Move debugging options into ./nclyr_build.conf

--- a/nclyr_build.conf
+++ b/nclyr_build.conf
@@ -1,4 +1,7 @@
 
+NCLYR_DEBUG = y
+NCLYR_PROF = n
+
 # Set this to 'n' instead of 'y' to avoid compiling in support for any of these
 # players.
 CONFIG_PLAYER_PIANOBAR = y
