--- a/nclyr/tui/Makefile
+++ b/nclyr/tui/Makefile
@@ -2,6 +2,8 @@
 objs-y += tui.o
 objs-y += tui_state.o
 objs-y += tui_color.o
+objs-y += tui_config.o
+objs-y += tui_printf.o
 objs-y += clock_win.o
 objs-y += help_win.o
 objs-y += statusline.o
@@ -9,6 +11,7 @@ objs-y += line_win.o
 objs-y += char_to_str.o
 objs-y += window_center.o
 objs-y += playlist_win.o
+objs-y += config_win.o
 
 objs-$(CONFIG_LIB_GLYR) += lyrics_win.o
 objs-$(CONFIG_LIB_GLYR) += artist_win.o
