Update code to use 'tui_printf_compiled'

--- a/nclyr/tui/Makefile
+++ b/nclyr/tui/Makefile
@@ -1,9 +1,10 @@
 
+cflags-y += -I./nclyr/tui
+
 objs-y += tui.o
 objs-y += tui_state.o
 objs-y += tui_color.o
 objs-y += tui_config.o
-objs-y += tui_printf.o
 objs-y += clock_win.o
 objs-y += help_win.o
 objs-y += statusline.o
@@ -15,4 +16,6 @@ objs-y += config_win.o
 
 objs-$(CONFIG_LIB_GLYR) += lyrics_win.o
 objs-$(CONFIG_LIB_GLYR) += artist_win.o
+
+subdir-y += printf
 
