--- a/nclyr/Makefile
+++ b/nclyr/Makefile
@@ -1,21 +1,20 @@
 
-objs-y += song.o
-objs-y += song_empty.o
 objs-y += nclyr.o
 objs-y += signal_handler.o
-objs-y += a_sprintf.o
-objs-y += stringcasecmp.o
 objs-y += args.o
 objs-y += nclyr_conf.o
 objs-y += iface.o
+objs-y += ifaces.o
 objs-y += build.o
-objs-y += playlist.o
 objs-y += cons_color.o
 
 objs-$(CONFIG_LIB_GLYR) += lyr_thread.o
 objs-$(NCLYR_DEBUG) += debug.o
 
-subdir-y += players
+subdir-y += common
+subdir-y += song
+subdir-y += player
+subdir-y += extern_players
 subdir-y += config
 subdir-$(CONFIG_TUI) += tui
 subdir-$(CONFIG_CONSOLE) += console
