--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ compiler:
 
 install:
   - sudo apt-get install valgrind
+  - sudo apt-get install mpd
+  - sudo apt-get install libglyr-dev
 
 script:
   - make && make check
