--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ compiler:
 install:
   - sudo apt-get install valgrind
   - sudo apt-get install mpd
-  - sudo apt-get install libglyr-dev
+  - wget http://security.ubuntu.com/ubuntu/pool/universe/g/glyr/libglyr-dev_1.0.5-1_amd64.deb
+  - dpkg -i libglyr-dev_1.0.5-1_amd64.deb
 
 script:
   - make && make check
