Add libmpdclient to ./.travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ compiler:
 
 install:
   - sudo apt-get install valgrind
-  - sudo apt-get install mpd
+  - sudo apt-get install libmpdclient-dev
   - wget http://security.ubuntu.com/ubuntu/pool/universe/g/glyr/libglyr-dev_1.0.5-1_amd64.deb
   - wget http://security.ubuntu.com/ubuntu/pool/universe/g/glyr/libglyr1_1.0.5-1_amd64.deb
   - sudo dpkg -i libglyr1_1.0.5-1_amd64.deb
