Update ./nclyr_build.conf to match changes to config system

--- a/nclyr_build.conf
+++ b/nclyr_build.conf
@@ -1,17 +1,44 @@
 
-NCLYR_DEBUG = y
-NCLYR_PROF = n
+# Enables program-wide debuging support
+DEBUG = y
+DEBUG_FILE = "/tmp/nclyr_debug.log"
 
-# Set this to 'n' instead of 'y' to avoid compiling in support for any of these
-# players.
-CONFIG_PLAYER_PIANOBAR = y
-CONFIG_PLAYER_MPD = y
+# Compiles in profiling support
+PROF = n
 
-CONFIG_LIB_GLYR = y
+## Set these to 'n' instead of 'y' to avoid compiling in support for any of these
+## players.
+# Pianobar - Pandora comamnd-line client - Pulls no dependencies
+PLAYER_PIANOBAR = y
 
-CONFIG_TUI = y
-CONFIG_CONSOLE = y
+# mpd - music player daemon - Pulls libmpdclient
+PLAYER_MPD = y
 
-CONFIG_DEFAULT_IFACE = "console"
-CONFIG_DEFAULT_PLAYER = "mpd"
+# glyr is used to gather song information, such as lyrics and artist bio
+# pulls libglyr
+LIB_GLYR = y
+
+# tui interface (Pulls ncurses)
+TUI = y
+
+# console interface (Probably want this - Pulls no dependencies)
+CONSOLE = y
+
+# Default iface - You should choose an iface which you chose to compile in,
+# though it's not required.
+DEFAULT_IFACE = "console"
+
+# Default player - You should choose a player which you chose to compile in,
+# though it's not required.
+DEFAULT_PLAYER = "mpd"
+
+## tui interface settings
+
+TUI_DEFAULT_STATUSLINE = " ${color;f:cyan;b:default}${title}${color;f:default;b:default} | ${color;f:red;b:default}${artist}${color;f:default;b:default} | ${color;f:green;b:default}${album}"
+
+# Playlist display settings
+TUI_DEFAULT_PLAYLIST_SEL_PLAYING = "${bold}${play-num;w:2}. ${reverse}${color;f:cyan}${title}${color;f:default} | ${color;f:red}${artist}${color;f:default} | ${color;f:green}${album}"
+TUI_DEFAULT_PLAYLIST_PLAYING     = "${bold}${play-num;w:2}. ${color;f:cyan}${title}${color;f:default} | ${color;f:red}${artist}${color;f:default} | ${color;f:green}${album}"
+TUI_DEFAULT_PLAYLIST_SEL         = "${play-num;w:2}. ${reverse}${color;f:cyan}${title}${color;f:default} | ${color;f:red}${artist}${color;f:default} | ${color;f:green}${album}"
+TUI_DEFAULT_PLAYLIST_NORMAL      = "${play-num;w:2}. ${color;f:cyan}${title}${color;f:default} | ${color;f:red}${artist}${color;f:default} | ${color;f:green}${album}"
 
