Move 'extern_players' to 'players'

--- a/nclyr/Makefile
+++ b/nclyr/Makefile
@@ -9,12 +9,12 @@ objs-y += build.o
 objs-y += cons_color.o
 
 objs-$(CONFIG_LIB_GLYR) += lyr_thread.o
-objs-$(NCLYR_DEBUG) += debug.o
+objs-$(CONFIG_DEBUG) += debug.o
 
 subdir-y += common
 subdir-y += song
 subdir-y += player
-subdir-y += extern_players
+subdir-y += players
 subdir-y += config
 subdir-$(CONFIG_TUI) += tui
 subdir-$(CONFIG_CONSOLE) += console
