Add --config early parsing, and players configuration options

--- a/nclyr/players/Makefile
+++ b/nclyr/players/Makefile
@@ -1,5 +1,6 @@
 
 objs-y += players.o
+objs-y += players_config.o
 
 subdir-$(CONFIG_PLAYER_PIANOBAR) += pianobar
 subdir-$(CONFIG_PLAYER_MPD) += mpd
