--- a/nclyr_build.conf
+++ b/nclyr_build.conf
@@ -26,19 +26,30 @@ CONSOLE = y
 
 # Default iface - You should choose an iface which you chose to compile in,
 # though it's not required.
-DEFAULT_IFACE = "console"
+IFACE_DEFAULT = "console"
 
 # Default player - You should choose a player which you chose to compile in,
 # though it's not required.
-DEFAULT_PLAYER = "mpd"
+PLAYER_DEFAULT = "mpd"
+
+# Default config file to load. This can only be changed by supplying a new
+# filename as an argument
+CONFIG_DEFAULT = "~/.nclyrrc"
 
 ## tui interface settings
 
-TUI_DEFAULT_STATUSLINE = " ${color;f:cyan;b:default}${title}${color;f:default;b:default} | ${color;f:red;b:default}${artist}${color;f:default;b:default} | ${color;f:green;b:default}${album}"
+TUI_STATUSLINE_DEFAULT = " ${color;f:cyan;b:default}${title}${color;f:default;b:default} | ${color;f:red;b:default}${artist}${color;f:default;b:default} | ${color;f:green;b:default}${album}"
 
 # Playlist display settings
-TUI_DEFAULT_PLAYLIST_SEL_PLAYING = "${bold}${play-num;w:2}. ${reverse}${color;f:cyan}${title}${color;f:default} | ${color;f:red}${artist}${color;f:default} | ${color;f:green}${album}"
-TUI_DEFAULT_PLAYLIST_PLAYING     = "${bold}${play-num;w:2}. ${color;f:cyan}${title}${color;f:default} | ${color;f:red}${artist}${color;f:default} | ${color;f:green}${album}"
-TUI_DEFAULT_PLAYLIST_SEL         = "${play-num;w:2}. ${reverse}${color;f:cyan}${title}${color;f:default} | ${color;f:red}${artist}${color;f:default} | ${color;f:green}${album}"
-TUI_DEFAULT_PLAYLIST_NORMAL      = "${play-num;w:2}. ${color;f:cyan}${title}${color;f:default} | ${color;f:red}${artist}${color;f:default} | ${color;f:green}${album}"
+TUI_PLAYLIST_SEL_PLAYING_DEFAULT = "${bold}${play-num;w:2}. ${reverse}${color;f:cyan}${title}${color;f:default} | ${color;f:red}${artist}${color;f:default} | ${color;f:green}${album}"
+TUI_PLAYLIST_PLAYING_DEFAULT     = "${bold}${play-num;w:2}. ${color;f:cyan}${title}${color;f:default} | ${color;f:red}${artist}${color;f:default} | ${color;f:green}${album}"
+TUI_PLAYLIST_SEL_DEFAULT         = "${play-num;w:2}. ${reverse}${color;f:cyan}${title}${color;f:default} | ${color;f:red}${artist}${color;f:default} | ${color;f:green}${album}"
+TUI_PLAYLIST_NORMAL_DEFAULT      = "${play-num;w:2}. ${color;f:cyan}${title}${color;f:default} | ${color;f:red}${artist}${color;f:default} | ${color;f:green}${album}"
+
+PLAYER_MPD_SERVER_DEFAULT = "127.0.0.1"
+PLAYER_MPD_PORT_DEFAULT   = 8080
+
+PLAYER_PIANOBAR_NOWPLAYING_DEFAULT = "~/.config/pianobar/nowplyaing"
+PLAYER_PIANOBAR_FIFO_DEFAULT = "~/.config/pianobar/ctl"
+
 
