--- a/nclyr/tui/printf/Makefile
+++ b/nclyr/tui/printf/Makefile
@@ -1,10 +1,10 @@
 
-objs-y += printf.o
-objs-y += compiled.o
+objs-y += compiler.o
 objs-y += printf_string.o
 objs-y += printf_color.o
 objs-y += printf_arg.o
 objs-y += printf_attr.o
+objs-y += printf_if.o
 
 subdir-y += args
 
