--- a/nclyr_build.conf
+++ b/nclyr_build.conf
@@ -41,10 +41,7 @@ CONFIG_DEFAULT = "~/.nclyrrc"
 TUI_STATUSLINE_DEFAULT = " ${color;f:cyan;b:default}${title}${color;f:default;b:default} | ${color;f:red;b:default}${artist}${color;f:default;b:default} | ${color;f:green;b:default}${album}"
 
 # Playlist display settings
-TUI_PLAYLIST_SEL_PLAYING_DEFAULT = "${bold}${play-num;w:2}. ${reverse}${color;f:cyan}${title}${color;f:default} | ${color;f:red}${artist}${color;f:default} | ${color;f:green}${album}"
-TUI_PLAYLIST_PLAYING_DEFAULT     = "${bold}${play-num;w:2}. ${color;f:cyan}${title}${color;f:default} | ${color;f:red}${artist}${color;f:default} | ${color;f:green}${album}"
-TUI_PLAYLIST_SEL_DEFAULT         = "${play-num;w:2}. ${reverse}${color;f:cyan}${title}${color;f:default} | ${color;f:red}${artist}${color;f:default} | ${color;f:green}${album}"
-TUI_PLAYLIST_NORMAL_DEFAULT      = "${play-num;w:2}. ${color;f:cyan}${title}${color;f:default} | ${color;f:red}${artist}${color;f:default} | ${color;f:green}${album}"
+TUI_PLAYLIST_PRINTLINE_DEFAULT      = "${if;playing:true}${bold}${endif}${play-num;w:2}. ${if;selected:true}${reverse}${endif}${color;f:cyan}${title}${color;f:default} | ${color;f:red}${artist}${color;f:default} | ${color;f:green}${album}"
 
 PLAYER_MPD_SERVER_DEFAULT = "127.0.0.1"
 PLAYER_MPD_PORT_DEFAULT   = 6600
