Add right_align to tui_printf

--- a/nclyr/tui/printf/Makefile
+++ b/nclyr/tui/printf/Makefile
@@ -5,6 +5,7 @@ objs-y += printf_color.o
 objs-y += printf_arg.o
 objs-y += printf_attr.o
 objs-y += printf_if.o
+objs-y += printf_right_align.o
 
 subdir-y += args
 
