--- a/nclyr_build.conf
+++ b/nclyr_build.conf
@@ -38,14 +38,26 @@ CONFIG_DEFAULT = "~/.nclyrrc"
 
 ## tui interface settings
 
-TUI_STATUSLINE_DEFAULT = " ${color;f:cyan;b:default}${title}${color;f:default;b:default} | ${color;f:red;b:default}${artist}${color;f:default;b:default} | ${color;f:green;b:default}${album}"
+TUI_STATUSLINE_SONG_DEFAULT =
+        " ${color;f:cyan}${title}${color;f:default}"
+        " | ${color;f:red}${artist}${color;f:default}"
+        " | ${color;f:green;b:default}${album}"
+        "${right_align}Current time"
 
 # Playlist display settings
-TUI_PLAYLIST_PRINTLINE_DEFAULT      = "${if;playing:true}${bold}${endif}${play-num;w:2}. ${if;selected:true}${reverse}${endif}${color;f:cyan}${title}${color;f:default} | ${color;f:red}${artist}${color;f:default} | ${color;f:green}${album}"
+TUI_PLAYLIST_PRINTLINE_DEFAULT =
+        "${if;playing:true}${bold}${endif}"
+        "${play-num;w:2}. "
+        "${if;selected:true}${reverse}${endif}"
+        "${color;f:cyan}${title}${color;f:default}"
+        " | ${color;f:red}${artist}"
+        "${right_align}${color;f:default} | ${color;f:green}${album}"
 
+# mpd connection settings
 PLAYER_MPD_SERVER_DEFAULT = "127.0.0.1"
 PLAYER_MPD_PORT_DEFAULT   = 6600
 
+# pianobar settings
 PLAYER_PIANOBAR_NOWPLAYING_DEFAULT = "~/.config/pianobar/nowplaying"
 PLAYER_PIANOBAR_FIFO_DEFAULT = "~/.config/pianobar/ctl"
 
