Fix-up Makefile stuff

--- a/config/Makefile
+++ b/config/Makefile
@@ -1,9 +1,12 @@
 
+objs-y += config_parser.tab.o
 objs-y += config.o
 objs-y += config_c.o
 objs-y += config_m.o
-objs-y += config_parser.tab.o
 objs-y += config_lex.o
+
+$(srctree)/config.o: $(srctree)/config_parser.tab.h
+$(srctree)/config_lex.o: $(srctree)/config_parser.tab.h
 
 $(srctree)/%.tab.c $(srctree)/%.tab.h: $(srctree)/%.y
 	@$(call mecho," YACC    $@","$(YACC) $(YFLAGS) -dtv $<")
@@ -14,4 +17,5 @@ $(srctree)/config_lex.c: $(srctree)/config_lex.l
 	$(Q)$(LEX) $(LFLAGS) -o $@ $<
 
 CLEAN_LIST += $(srctree)/config_lex.c $(srctree)/config_parser.tab.c $(srctree)/config_parser.tab.h
+.SECONDARY: $(srctree)/config_parser.tab.c $(srctree)/config_parser.tab.h
 
