Change playlist display default setting

--- a/nclyr_build.conf
+++ b/nclyr_build.conf
@@ -50,8 +50,8 @@ TUI_PLAYLIST_PRINTLINE_DEFAULT =
         "${play-num;w:2}. "
         "${if;selected:true}${reverse}${endif}"
         "${color;f:cyan}${title}${color;f:default}"
-        " | ${color;f:red}${artist}"
-        "${right_align}${color;f:default} | ${color;f:green}${album}"
+        " | ${color;f:red}${artist}${color;f:default} | ${color;f:green}${album}"
+        "${right_align}"
 
 # mpd connection settings
 PLAYER_MPD_SERVER_DEFAULT = "127.0.0.1"
