--- a/nclyr_build.conf
+++ b/nclyr_build.conf
@@ -41,16 +41,22 @@ CONFIG_DEFAULT = "~/.nclyrrc"
 TUI_STATUSLINE_SONG_DEFAULT =
         " ${color;f:cyan}${title}${color;f:default}"
         " | ${color;f:red}${artist}${color;f:default}"
-        " | ${color;f:green;b:default}${album}"
-        "${right_align}Current time"
+        " | ${color;f:green}${album}${color;f:default}"
+        "${right_align}"
+        "["
+          "${position_minutes;w:2;z:true}:${position_seconds;w:2;z:true}"
+          "/"
+          "${song_length_minutes;w:2;z:true}:${song_length_seconds;w:2;z:true}"
+        "]"
 
 # Playlist display settings
 TUI_PLAYLIST_PRINTLINE_DEFAULT =
         "${if;playing:true}${bold}${endif}"
-        "${play-num;w:2}. "
         "${if;selected:true}${reverse}${endif}"
-        "${color;f:cyan}${title}${color;f:default}"
-        " | ${color;f:red}${artist}${color;f:default} | ${color;f:green}${album}"
+        "${play-num;w:2}. "
+        "${color;f:cyan} ${title} ${color;f:default}"
+        ">>${color;f:red} ${artist} ${color;f:default}"
+        ">>${color;f:green} ${album} "
         "${right_align}"
 
 # mpd connection settings
