Update ./nclyr_build.conf to take advantage of new syntax

--- a/nclyr_build.conf
+++ b/nclyr_build.conf
@@ -6,20 +6,9 @@ DEBUG_FILE = "/tmp/nclyr_debug.log"
 # Compiles in profiling support
 PROF = n
 
-## Set these to 'n' instead of 'y' to avoid compiling in support for any of these
-## players.
-# Pianobar - Pandora comamnd-line client - Pulls no dependencies
-PLAYER_PIANOBAR = y
-
-# mpd - music player daemon - Pulls libmpdclient
-PLAYER_MPD = y
-
 # glyr is used to gather song information, such as lyrics and artist bio
 # pulls libglyr
 LIB_GLYR = y
-
-# tui interface (Pulls ncurses)
-TUI = y
 
 # console interface (Probably want this - Pulls no dependencies)
 CONSOLE = y
@@ -28,43 +17,62 @@ CONSOLE = y
 # though it's not required.
 IFACE_DEFAULT = "console"
 
-# Default player - You should choose a player which you chose to compile in,
-# though it's not required.
-PLAYER_DEFAULT = "mpd"
-
 # Default config file to load. This can only be changed by supplying a new
 # filename as an argument
 CONFIG_DEFAULT = "~/.nclyrrc"
 
-## tui interface settings
+# tui interface (Pulls ncurses)
+TUI = y
+TUI {
+    STATUSLINE {
+        SONG_DEFAULT =
+            " ${color;f:cyan}${title}${color;f:default}"
+            " | ${color;f:red}${artist}${color;f:default}"
+            " | ${color;f:green}${album}${color;f:default}"
+            "${right_align}"
+            "${if;paused:true}"
+              "[paused] "
+            "${endif}"
+            "["
+              "${position_minutes;w:2;z:true}:${position_seconds;w:2;z:true}"
+              "/"
+              "${song_length_minutes;w:2;z:true}:${song_length_seconds;w:2;z:true}"
+            "]"
+    }
 
-TUI_STATUSLINE_SONG_DEFAULT =
-        " ${color;f:cyan}${title}${color;f:default}"
-        " | ${color;f:red}${artist}${color;f:default}"
-        " | ${color;f:green}${album}${color;f:default}"
-        "${right_align}"
-        "["
-          "${position_minutes;w:2;z:true}:${position_seconds;w:2;z:true}"
-          "/"
-          "${song_length_minutes;w:2;z:true}:${song_length_seconds;w:2;z:true}"
-        "]"
+    PLAYLIST {
+        PRINTLINE_DEFAULT =
+            "${if;playing:true}${bold}${endif}"
+            "${if;selected:true}${reverse}${endif}"
+            "${play-num;w:2}. "
+            "${color;f:cyan} ${title} ${color;f:default}"
+            ">>${color;f:red} ${artist} ${color;f:default}"
+            ">>${color;f:green} ${album} "
+            "${right_align}"
+    }
+}
 
-# Playlist display settings
-TUI_PLAYLIST_PRINTLINE_DEFAULT =
-        "${if;playing:true}${bold}${endif}"
-        "${if;selected:true}${reverse}${endif}"
-        "${play-num;w:2}. "
-        "${color;f:cyan} ${title} ${color;f:default}"
-        ">>${color;f:red} ${artist} ${color;f:default}"
-        ">>${color;f:green} ${album} "
-        "${right_align}"
+# Player settings
+PLAYER {
+    # Default player - You should choose a player which you chose to compile in,
+    # though it's not required.
+    DEFAULT = "mpd"
 
-# mpd connection settings
-PLAYER_MPD_SERVER_DEFAULT = "127.0.0.1"
-PLAYER_MPD_PORT_DEFAULT   = 6600
+    # mpd - music player daemon - Pulls libmpdclient
+    MPD = y
+    MPD {
+        SERVER_DEFAULT = "127.0.0.1"
+        PORT_DEFAULT = 6600
+    }
 
-# pianobar settings
-PLAYER_PIANOBAR_NOWPLAYING_DEFAULT = "~/.config/pianobar/nowplaying"
-PLAYER_PIANOBAR_FIFO_DEFAULT = "~/.config/pianobar/ctl"
+    # Pianobar - Pandora comamnd-line client - Pulls no dependencies
+    PIANOBAR = y
+    PIANOBAR {
+        NOWPLAYING_DEFAULT = "~/.config/pianobar/nowplaying"
+        FIFO_DEFAULT = "~/.config/pianobar/ctl"
+    }
+}
+
+
 
 
