Update ./nclyr_build.conf to match time arg addition

--- a/nclyr_build.conf
+++ b/nclyr_build.conf
@@ -34,9 +34,9 @@ TUI {
               "[paused] "
             "${endif}"
             "["
-              "${position_minutes;w:2;z:true}:${position_seconds;w:2;z:true}"
+              "${position;pad:true;seconds:true;minutes:true}"
               "/"
-              "${song_length_minutes;w:2;z:true}:${song_length_seconds;w:2;z:true}"
+              "${duration;pad:true;seconds:true;minutes:true}"
             "]"
     }
 
@@ -49,6 +49,7 @@ TUI {
             ">>${color;f:red} ${artist} ${color;f:default}"
             ">>${color;f:green} ${album} "
             "${right_align}"
+              "${color;f:white}[${duration;pad:true;seconds:true;minutes:true}]"
     }
 }
 
