Update config file parser and lexer

--- a/nclyr/config/Makefile
+++ b/nclyr/config/Makefile
@@ -1,13 +1,9 @@
 
-objs-y += config_lexer.o
 objs-y += config_file.o
 objs-y += config_help.o
 objs-y += config_item.o
 objs-y += config_print.o
 objs-y += config_arg.o
 
-clean-list-y += config_lexer.c
+subdir-y += file
 
-$(objtree)/config_lexer.c: $(srctree)/config_lexer.l
-	@$(call mecho," LEX     $@","$(LEX) $(LFLAGS) -o $@ $<")
-	$(Q)$(LEX) $(LFLAGS) -o $@ $<
