Add volume to default statusline

--- a/nclyr_build.conf
+++ b/nclyr_build.conf
@@ -33,6 +33,7 @@ TUI {
             "${if;paused:true}"
               "[paused] "
             "${endif}"
+            "[${volume;w:2;z:true}%] "
             "["
               "${position;pad:true;seconds:true;minutes:true}"
               "/"
