Move tui/printf to cons/printf - Rename functions and change usage

--- a/nclyr/Makefile
+++ b/nclyr/Makefile
@@ -6,7 +6,6 @@ objs-y += nclyr_conf.o
 objs-y += iface.o
 objs-y += ifaces.o
 objs-y += build.o
-objs-y += cons_color.o
 
 objs-$(CONFIG_LIB_GLYR) += lyr_thread.o
 objs-$(CONFIG_DEBUG) += debug.o
@@ -16,6 +15,7 @@ subdir-y += song
 subdir-y += player
 subdir-y += players
 subdir-y += config
+subdir-y += cons
 subdir-$(CONFIG_TUI) += tui
 subdir-$(CONFIG_CONSOLE) += console
 
