--- a/nclyr/tui/Makefile
+++ b/nclyr/tui/Makefile
@@ -1,13 +1,12 @@
 
-cflags-y += -I./nclyr/tui
+cflags-y += -I$(srctree)
 
 objs-y += tui.o
 objs-y += tui_state.o
 objs-y += tui_color.o
 objs-y += tui_config.o
-objs-y += tui_chstr.o
+#objs-y += tui_chstr.o
 objs-y += char_to_str.o
 
-subdir-y += printf
 subdir-y += windows
 
