Start using cons_printf in the console interface

--- a/nclyr_build.conf
+++ b/nclyr_build.conf
@@ -10,9 +10,6 @@ PROF = n
 # pulls libglyr
 LIB_GLYR = y
 
-# console interface (Probably want this - Pulls no dependencies)
-CONSOLE = y
-
 # Default iface - You should choose an iface which you chose to compile in,
 # though it's not required.
 IFACE_DEFAULT = "console"
@@ -20,6 +17,25 @@ IFACE_DEFAULT = "console"
 # Default config file to load. This can only be changed by supplying a new
 # filename as an argument
 CONFIG_DEFAULT = "~/.nclyrrc"
+
+# console interface (Probably want this - Pulls no dependencies)
+CONSOLE = y
+CONSOLE {
+    STATUSLINE_DEFAULT =
+            " ${color;f:cyan}${title}${color;f:default}"
+            " | ${color;f:red}${artist}${color;f:default}"
+            " | ${color;f:green}${album}${color;f:default}"
+            "${right_align}"
+            "${if;paused:true}"
+              "[paused] "
+            "${endif}"
+            "[${volume;w:2;z:true}%] "
+            "["
+              "${position;pad:true;seconds:true;minutes:true}"
+              "/"
+              "${duration;pad:true;seconds:true;minutes:true}"
+            "]"
+}
 
 # tui interface (Pulls ncurses)
 TUI = y
