Add command-parsing and a few different sets of commands

--- a/nclyr/ifaces/tui/Makefile
+++ b/nclyr/ifaces/tui/Makefile
@@ -7,6 +7,10 @@ objs-y += tui_color.o
 objs-y += tui_config.o
 #objs-y += tui_chstr.o
 objs-y += char_to_str.o
+objs-y += cmd_exec.o
+objs-y += cmd_handle_tui.o
+objs-y += cmd_handle_player.o
+objs-y += cmd_handle_window.o
 
 subdir-y += windows
 
