Reorganize and split-up tui.c

--- a/nclyr/ifaces/tui/Makefile
+++ b/nclyr/ifaces/tui/Makefile
@@ -2,9 +2,12 @@
 cflags-y += -I$(srctree)
 
 objs-y += tui.o
+objs-y += tui_main.o
 objs-y += tui_state.o
 objs-y += tui_color.o
 objs-y += tui_config.o
+objs-y += tui_cmds.o
+objs-y += tui_keys.o
 #objs-y += tui_chstr.o
 objs-y += char_to_str.o
 objs-y += cmd_exec.o
