--- a/nclyr/ifaces/tui/windows/Makefile
+++ b/nclyr/ifaces/tui/windows/Makefile
@@ -6,6 +6,7 @@ objs-y += line_win.o
 objs-y += window_center.o
 objs-y += playlist_win.o
 objs-y += config_win.o
+objs-y += manager_win.o
 
 objs-$(CONFIG_LIB_GLYR) += lyrics_win.o
 objs-$(CONFIG_LIB_GLYR) += artist_win.o
