Added song remove + Song filename display
Song remove is fairly simple - Addition of new PLAYER_CTRL for removing
a song, and the position of the song in the playlist is passed.

Song filename display is a bit more complex. The solution is to add
another argument type specefically for 'song's. Each song has two
different cons_printf_compiled formats, and one or the other is used
depending on what name information is aviliable for that song. At the
moment it is good enough to display the standard triple, and then
fallback to the filename. Both the triple and filename display are
configurable separately from eachother.

--- a/nclyr_build.conf
+++ b/nclyr_build.conf
@@ -18,9 +18,16 @@ IFACE_DEFAULT = "console"
 # filename as an argument
 CONFIG_DEFAULT = "~/.nclyrrc"
 
+
 # console interface (Probably want this - Pulls no dependencies)
 CONSOLE = y
 CONSOLE {
+    SONG_DISPLAY_TRIPLE = "${color;f:cyan}${title}${color;f:default}"
+                          " | ${color;f:red}${artist}${color;f:default}"
+                          " | ${color;f:green}${album}${color;f:default}"
+
+    SONG_DISPLAY_FILENAME = "${color;f:green}${filename}${color;f:default}"
+
     STATUSLINE_DEFAULT =
             " ${color;f:cyan}${title}${color;f:default}"
             " | ${color;f:red}${artist}${color;f:default}"
@@ -41,10 +48,14 @@ CONSOLE {
 TUI = y
 TUI {
     STATUSLINE {
+        SONG_TRIPLE_DEFAULT = "${color;f:cyan}${title}${color;f:default}"
+                              " | ${color;f:red}${artist}${color;f:default}"
+                              " | ${color;f:green}${album}${color;f:default}"
+
+        SONG_FILENAME_DEFAULT = "${color;f:green}${filename}${color;f:default}"
+
         SONG_DEFAULT =
-            " ${color;f:cyan}${title}${color;f:default}"
-            " | ${color;f:red}${artist}${color;f:default}"
-            " | ${color;f:green}${album}${color;f:default}"
+            " ${song}"
             "${right_align}"
             "${if;paused:true}"
               "[paused] "
@@ -58,13 +69,17 @@ TUI {
     }
 
     PLAYLIST {
+        SONG_TRIPLE_DEFAULT = "${color;f:cyan} ${title} ${color;f:default}"
+                              ">>${color;f:red} ${artist} ${color;f:default}"
+                              ">>${color;f:green} ${album} "
+
+        SONG_FILENAME_DEFAULT = "${color;f:cyan} ${filename} ${color;f:default}"
+
         PRINTLINE_DEFAULT =
             "${if;playing:true}${bold}${endif}"
             "${if;selected:true}${reverse}${endif}"
             "${play-num;w:2}. "
-            "${color;f:cyan} ${title} ${color;f:default}"
-            ">>${color;f:red} ${artist} ${color;f:default}"
-            ">>${color;f:green} ${album} "
+            "${song}"
             "${right_align}"
               "${color;f:white}[${duration;pad:true;seconds:true;minutes:true}]"
     }
