Worked on some TUI stuff
The big thing is the browser window, which allows for adding new songs
from the database to the current queue. Still being worked on, however
it does work.

--- a/nclyr/Makefile
+++ b/nclyr/Makefile
@@ -5,6 +5,7 @@ objs-y += args.o
 objs-y += nclyr_conf.o
 objs-y += iface.o
 objs-y += build.o
+objs-y += directory.o
 
 objs-$(CONFIG_LIB_GLYR) += lyr_thread.o
 objs-$(CONFIG_DEBUG) += debug.o
