--- a/nclyr_build.conf
+++ b/nclyr_build.conf
@@ -83,6 +83,16 @@ TUI {
             "${right_align}"
               "${color;f:white}[${duration;pad:true;seconds:true;minutes:true}]"
     }
+
+    BROWSE {
+        SONG_TRIPLE_DEFAULT = "${color;f:cyan} ${title} ${color;f:default}"
+                              ">>${color;f:red} ${artist} ${color;f:default}"
+                              ">>${color;f:green} ${album} "
+
+        SONG_FILENAME_DEFAULT = "${color;f:cyan} ${filename} ${color;f:default}"
+
+        DIRECTORY = "[${name}]"
+    }
 }
 
 # Player settings
