Updates to config system, and MPD visualization addition

--- a/nclyr_build.conf
+++ b/nclyr_build.conf
@@ -93,6 +93,16 @@ TUI {
 
         DIRECTORY = "[${name}]"
     }
+
+    MPD {
+        # Adds window for music visualizer.
+        # Pulls libfftw3
+        VISUALIZER = y
+        VISUALIZER {
+            FILENAME_DEFAULT = "/tmp/mpd.fifo"
+            COLOR_DEFAULT = red, black
+        }
+    }
 }
 
 # Player settings
