Fixup config, convert playlist_win to selectable_win, various fixes

--- a/nclyr_build.conf
+++ b/nclyr_build.conf
@@ -91,7 +91,13 @@ TUI {
 
         SONG_FILENAME_DEFAULT = "${color;f:cyan} ${filename} ${color;f:default}"
 
-        DIRECTORY = "[${name}]"
+        SONG_DEFAULT = "${if;selected:true}${reverse}${endif}"
+                       "${song}"
+                         "${right_align}${duration;pad:true;minutes:true;seconds:true}"
+
+        DIRECTORY_DEFAULT = "${if;selected:true}${reverse}${endif}"
+                            "[${name}]"
+                            "${right_align} "
     }
 
     MPD {
@@ -100,7 +106,13 @@ TUI {
         VISUALIZER = y
         VISUALIZER {
             FILENAME_DEFAULT = "/tmp/mpd.fifo"
-            COLOR_DEFAULT = red, black
+            COLOR_DEFAULT = (blue, default)
+            BKGDCOLOR_DEFAULT = (default, default)
+            TYPE_DEFAULT = wave
+            FPS_DEFAULT = 20
+            SHOWFPS_DEFAULT = y
+            # Either stereo or mono
+            SOUND_DEFAULT = stereo
         }
     }
 }
