--- a/nclyr_build.conf
+++ b/nclyr_build.conf
@@ -33,9 +33,14 @@ CONSOLE {
             " | ${color;f:red}${artist}${color;f:default}"
             " | ${color;f:green}${album}${color;f:default}"
             "${right_align}"
-            "${if;paused:true}"
-              "[paused] "
-            "${endif}"
+            "["
+            "${is_random;t:z;f:-}"
+            "${is_single;t:s;f:-}"
+            "${is_consume;t:c;f:-}"
+            "${is_crossfade;t:x;f:-}"
+            "${is_repeat;t:r;f:-}"
+            "${paused;t:p;f:-}"
+            "] "
             "[${volume;w:2;z:true}%] "
             "["
               "${position;pad:true;seconds:true;minutes:true}"
@@ -57,9 +62,14 @@ TUI {
         SONG_DEFAULT =
             " ${song}"
             "${right_align}"
-            "${if;paused:true}"
-              "[paused] "
-            "${endif}"
+            "["
+            "${is_random;t:z;f:-}"
+            "${is_single;t:s;f:-}"
+            "${is_consume;t:c;f:-}"
+            "${is_crossfade;t:x;f:-}"
+            "${is_repeat;t:r;f:-}"
+            "${paused;t:p;f:-}"
+            "] "
             "[${volume;w:2;z:true}%] "
             "["
               "${position;pad:true;seconds:true;minutes:true}"
